# generators

./: README.md  dune-project  generators.opam  polytypic.opam  polytypic.opam.locked
benchmark/: Benchmark.md  bench_gen_complete.ml  bench_transformation.ml  benchmark.ml  benchmark.sh  dune  plot.py
src/: Experiment.ml  Spaces.ml  Transformation.ml  dune  polytypic.ml  transformation.ml
test/: dune  polytypic_test.ml  spaces_test.ml  transformation_test.ml
