opam-version: "2.0"
synopsis: "Exeprimentation about data generators"
maintainer: "Nicolas Osborne <email@n-osborne.info>"
authors: [
  "Nicolas Osborne <email@n-osborne.info>"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.12"}
  "dune" {>= "2.0.0"}
  "qcheck"
  "mtime"
]
