(executable
 (name benchmark)
 (modules benchmark)
 (libraries mtime.clock.os experiment))

(executable
 (name bench_gen_complete)
 (modules bench_gen_complete)
 (libraries mtime.clock.os experiment))

(executable
 (name bench_transformation)
 (modules bench_transformation)
 (libraries experiment))

(executable
 (name bench_combinators)
 (modules bench_combinators)
 (libraries mtime.clock.os experiment))
